Test/roundingmodes/InvalidFuncName.bpl.expect
InvalidFuncName.bpl(4,34): error: ident expected
1 parse errors detected in InvalidFuncName.bpl
